add resources for user and comments
