# src/app/Http/Resources/User.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+use App\Http\Resources\Comment as CommentResource;
+use App\Comment;
+
+class User extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array
+     */
+    public function toArray($request)
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'email' => $this->email,
+            'comments' => CommentResource::collection($this->comments),
+            'created_at' => $this->created_at,
+            'updated_at' => $this->updated_at,
+        ];
+
+        return parent::toArray($request);
+    }
+}
